fix(typeahead-select): Remove initialKeyword and use controlledKeyword to set initial and changeable value - Set canSelectMultiple to false if options.length is not bigger than 1 - Add testid to use in typeahead-select.test - Add onClick optional prop to TypeheadSelectTrigger to set the correct classname when the menu is open - setMenuVisibility to false if shouldCloseOnSelect is true, so that the classnames are correct - Remove input styles when TypeaheadSelectInput is used inside of the trigger - Add testid to TypeheadSelectTrigger to test it easily - Fix most of the test cases for typeahead-select         - Fix classnames         - I used screen.findByText function to find the option but I can update it Note:- In my opinion, having two classnames for typeahead-select and select is a bit unnecessary. We can just add typeahead-select as main classname and override select classnames if necessary. - I couldn't fix a11y test case for the typeahead-select.

--- a/src/select/typeahead/_typeahead-select.scss
+++ b/src/select/typeahead/_typeahead-select.scss
@@ -2,16 +2,6 @@
   width: 100%;
 }
 
-.typeahead-select__header-container {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: flex-start;
-
-  border: 1px solid var(--default-border-color);
-  border-radius: var(--small-border-radius);
-}
-
 .typeahead-select--can-select-multiple {
   .input {
     height: auto;
